[deploy] Fix Image Overflow in Comment Preview - #4382 (#4466)
* Update CSS for img in .comment-preview-div

- Enforces `max-width:100%` on images in .comment-preview-div to prevent them from overflowing their container.

* Implement Recommended Changes

- Enforces `max-width:100%` on images in .comment-preview-div to prevent them from overflowing their container.

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -345,6 +345,9 @@ a.header-link {
       code {
         word-wrap: break-word;
       }
+      .article-body-image-wrapper img {
+        max-width: 100%;
+      }
     }
     .actions {
       text-align: right;
